After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756136 - gstreamer-1.6.0 doesn't compile on OS X 10.6: header file issue in gst-ptp-helper.c
gstreamer-1.6.0 doesn't compile on OS X 10.6: header file issue in gst-ptp-he...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.6.0
Other Mac OS
: Normal major
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-06 19:10 UTC by Ryan Hendrickson
Modified: 2015-10-07 18:05 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ryan Hendrickson 2015-10-06 19:10:16 UTC
From make:

    In file included from gst-ptp-helper.c:40:0:
    /usr/include/net/if.h:265:19: error: field 'ifru_addr' has incomplete type
       struct sockaddr ifru_addr;

Inserting

    #include <sys/socket.h>

before line 40 of lib/gst/helpers/gst-ptp-helper.c fixes it.

I'm compiling the source from https://download.gnome.org/sources/gstreamer/1.6/gstreamer-1.6.0.tar.xz, on OS X 10.6.8, using Homebrew and gcc 5.2.0. It seems somewhat likely that this is an issue specific to older versions of OS X, since other Homebrew users don't seem to have encountered this issue yet.
Comment 1 Sebastian Dröge (slomo) 2015-10-07 10:38:15 UTC
commit 29d11c4566ee342670ae32fbfff6dd7b1973f65e
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Oct 7 11:25:52 2015 +0100

    gst-ptp-helper: #include <sys/socket.h> to fix net/if.h include on OSX 10.6
    
    In file included from gst-ptp-helper.c:40:0:
       /usr/include/net/if.h:265:19: error: field 'ifru_addr' has incomplete type
          struct sockaddr ifru_addr;
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756136