libs/gst/helpers/gst-ptp-helper.c
@@ -37,6 +37,7 @@
 #include <sys/types.h>
 #include <errno.h>
 #include <sys/ioctl.h>
+#include <sys/socket.h>
 #include <net/if.h>
 #include <netinet/in.h>
 #include <string.h>
